fixed a minor bug with the sizing of the local news area on mobile

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -468,7 +468,7 @@
   .news {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(418.4px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
     grid-template-rows: calc(300px / 2);
     grid-auto-rows: calc(300px / 2);
 
